--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,22 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country-list {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  width: 213px;
+  
+}
+
+img{
+  width: 40px;
+  height: 30px;
+  margin-right: 40px;
+}
+
