--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
 }
 
+
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -37,3 +39,24 @@ img{
   margin-right: 40px;
 }
 
+.title-cont{
+  display: flex;
+  align-items: center;
+}
+
+.cont-data{
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+  margin: 0;
+}
+
+.main-text {
+  
+  font-weight: 700;
+  margin: 0 20 0 0;
+}
+
+.country-name {
+  margin: 10 0;
+}
